examples/test/testpolicy16684.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16684
  namespace: namespace178
spec:
  podSelector:
    matchLabels:
      key34: value5
      key42: value36
      key24: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key42: value0
          key24: value35
      podSelector:
        matchLabels:
          key17: value1
